<resources>
    <string name="app_name">Bucketlist</string>
    <string name="add_to_list">Add item to list</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="googleSignIn">Sign in using Google</string>
    <string name="confirmPassword">Type your password again</string>
    <string name="createAccount">Create account</string>
    <string name="profile">Profile</string>
    <string name="bucketlist">Bucketlist</string>
    <string name="add_new_item">Add a new item</string>
    <string name="input_name">Name:</string>
    <string name="input_description">Description:</string>
    <string name="input_location">Location:</string>
    <string name="search">Search</string>
    <string name="search_for_activities">Search for activities</string>
    <string name="location">Location</string>
    <string name="distance">Distance</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="to">To</string>
    <string name="didido">Did I do this: </string>
    <string name="setReminder">Set Reminder</string>
    <string name="share">Share</string>
    <string name="back_to_search">Back to search</string>
    <string name="add_photo">Add a Photo</string>
    <string name="edit">Edit activity</string>
    <string name="delete">Delete activity</string>
    <string name="txt_welcome">Log in to see your bucketlist!</string>
    <string name="edit_item_done">Save edited item</string>
    <string name="amount_done">Amount of bucketlist items done: </string>
    <string name="total_amount_bucketlist">Total amount of bucketlist items: </string>
    <string name="sign_out">Sign out</string>
    <string name="title_activity_item_location_maps">Map</string>
    <string name="search_explained">Search for a category in the neighbourhood of where you are</string>
    <string name="search_perimeter">Search perimeter: </string>
</resources>
